# evmos-liquid-stake

./: .gitignore
contracts/: hardhat.config.js  package-lock.json  package.json
contracts/contracts/: Deposit.sol  IDeposit.sol  LiquidStaking.sol  StEVMOS.sol
contracts/scripts/: deploy.js
react-app/public/: index.html
react-app/src/: App.jsx  constants.js
react-app/src/components/: Account.jsx  Address.jsx  Header.jsx  NetworkDisplay.jsx
react-app/src/contracts/: LiquidStaking.json  external_contracts.js
react-app/src/views/: ExampleUI.jsx  index.js
relay-node/: Cargo.toml  index.js  package.json
relay-node/src/: main.rs
