[package]
name = "streamflow-analytics"
version = "0.1.0"
authors = ["DanWizard <tortortorented@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.9.0", features = ["full"]}
actix-web = { version = "4.0.0-beta.21" }
actix-cors = { git="https://github.com/actix/actix-extras", rev="717b93e5079761020c76ffc36811400ecb7f3ffa"}